--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,21 @@ ul{
     padding: 0;
     display: flex;
     justify-content: space-between;
+    flex: 1 1 0;
 }
 ul > *{
     padding: 8px;
 }
+.main-content ul {
+    flex-wrap: wrap;
+}
+
 .main-content li {
     display: flex;
     flex-direction: column;
     justify-self: center;
     flex: 1 1 auto;
+    align-items: center;
 }
 a {
     text-decoration: none;
@@ -31,8 +37,8 @@ a {
     margin: 8px;
 }
 .header,.footer,.testimonial,.call-to-action,.main-content {
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 .header, .footer {
     background-color: #1f2937;
@@ -58,10 +64,25 @@ a {
     justify-content: space-between;
     align-items: center;
 }
+.nav-bar ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+    flex: 1 1 auto;
+    
+}
+.nav-bar li:nth-child(3){
+    padding-right: 0;
+}
+.nav-bar li:nth-child(3) a{
+    margin-right: 0;
+}   
 .header-content{
     display: flex;
-    flex: 0 0 100%;
-    max-height: 300px;
+    flex: 1 1 auto;
+    padding: 3% 0%;
 
 }
 .header-text{
@@ -69,11 +90,13 @@ a {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    padding-right: 5%;
 }
 .header button.sign-up {
     background-color: #3882f6;
-    padding: 8px 16px;
+    padding: 2% 5%;
     font-size: 18px;
+    font-weight: bold;
     color: #e5e7eb;
     border: 0;
     border-radius: 12px;
@@ -89,54 +112,56 @@ a {
     color: #e5e7eb;
 }
 .header-image {
+    min-width: 50%;
+    aspect-ratio: 5/2;
+    background-color: #3882f6;
     display: flex;
-    flex: 0 0 50%;
-    justify-content: right;
-    align-items: flex-start;
-}
-.header-image img {
-    max-width: 90%;
-    max-height: 90%;
+    justify-content: center;
+    align-items: center;
 }
 .main-content {
     display: flex;
     flex-direction: column;
-    flex: 1 1 0;
+    flex: 1 1 auto;
 }
 .main-content h1 {
     text-align: center;
     font-size: 36px;
     font-weight: bolder;
 }
-.main-content p.placeholder{
-    font-size: 32px;
-    font-weight: bolder;
-    color: rgba(88, 28, 156, 0.856);
-    min-height: 100px;
-    min-width: 100px;
+.main-content .placeholder{
+    width: 10rem;
+    aspect-ratio: 1;
+    color: #3882f6;
     align-self: center;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid #3882f6;
+    border-radius: 25px;
     margin: 0;
 }
 .main-content p.description-text{
+    width: 10rem;
     text-align: center;
+    margin: 8px 8px;
 }
 .testimonial {
+    padding: 5% 15%;
     background-color: #e5e7eb;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 .testimonial .testimonial-text{
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
+    padding: 5% 10%;
 }
 .testimonial .testimonial-speaker{
+    display: flex;
     font-size: 36px;
     font-weight: bolder;
     color: #1f2937;
+    justify-content: flex-end;
 }
 .call-to-action{
     background-color: white;
@@ -153,6 +178,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 25px;
 }
 .highlight-bar button.sign-up{
     background-color: #3882f6;
